Change app name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    Match3BootcampProject unless otherwise defined in this Privacy
+                    Tap & Monsters unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
